--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -45,22 +45,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\HeadingEast.cs" />
-    <Compile Include="Domain\HeadingNorth.cs" />
-    <Compile Include="Domain\HeadingSouth.cs" />
-    <Compile Include="Domain\HeadingWest.cs" />
-    <Compile Include="Domain\IHeading.cs" />
-    <Compile Include="Domain\IPlateau.cs" />
-    <Compile Include="Domain\IRover.cs" />
-    <Compile Include="Domain\Position.cs" />
+    <Compile Include="Domain\East.cs" />
+    <Compile Include="Domain\North.cs" />
+    <Compile Include="Domain\PlateauSpot.cs" />
+    <Compile Include="Domain\South.cs" />
+    <Compile Include="Domain\Spot.cs" />
+    <Compile Include="Domain\West.cs" />
+    <Compile Include="Domain\Heading.cs" />
+    <Compile Include="Domain\Plateau.cs" />
+    <Compile Include="Domain\Vehicle.cs" />
+    <Compile Include="Domain\Coordinate.cs" />
     <Compile Include="Infrastructure\HeadingRepository.cs" />
     <Compile Include="Infrastructure\NavigationCommandRepository.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Domain\RoversManager.cs" />
-    <Compile Include="Domain\Plateau.cs" />
+    <Compile Include="Domain\MarsPlateau.cs" />
+    <Compile Include="Infrastructure\SpotOutsidePlateauException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Domain\Rover.cs" />
-    <Compile Include="Domain\Coordinate.cs" />
+    <Compile Include="Domain\Position.cs" />
     <Compile Include="Services\CommandInterpreter.cs" />
     <Compile Include="Services\DeploymentCommand.cs" />
     <Compile Include="Services\NavigationCommand.cs" />
