--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -45,25 +45,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\East.cs" />
-    <Compile Include="Domain\North.cs" />
-    <Compile Include="Domain\PlateauSpot.cs" />
-    <Compile Include="Domain\South.cs" />
-    <Compile Include="Domain\Spot.cs" />
-    <Compile Include="Domain\West.cs" />
-    <Compile Include="Domain\Heading.cs" />
-    <Compile Include="Domain\Plateau.cs" />
-    <Compile Include="Domain\Vehicle.cs" />
-    <Compile Include="Domain\Coordinate.cs" />
+    <Compile Include="Services\RoverDeployer.cs" />
+    <Compile Include="Domain\Validation\BaseChecker.cs" />
+    <Compile Include="Domain\Validation\BoundaryChecker.cs" />
+    <Compile Include="Implementation\East.cs" />
+    <Compile Include="Domain\Validation\EastBoundaryChecker.cs" />
+    <Compile Include="Domain\Services\IBoundaryChecker.cs" />
+    <Compile Include="Implementation\North.cs" />
+    <Compile Include="Domain\Validation\NorthBoundaryChecker.cs" />
+    <Compile Include="Implementation\PlateauSpot.cs" />
+    <Compile Include="Implementation\South.cs" />
+    <Compile Include="Domain\Model\ISpot.cs" />
+    <Compile Include="Domain\Validation\SouthBoundaryChecker.cs" />
+    <Compile Include="Implementation\West.cs" />
+    <Compile Include="Domain\Model\IHeading.cs" />
+    <Compile Include="Domain\Model\IPlateau.cs" />
+    <Compile Include="Domain\Model\Vehicle.cs" />
+    <Compile Include="Domain\Model\Coordinate.cs" />
+    <Compile Include="Domain\Validation\WestBoundaryChecker.cs" />
     <Compile Include="Infrastructure\HeadingRepository.cs" />
     <Compile Include="Infrastructure\NavigationCommandRepository.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="Domain\RoversManager.cs" />
-    <Compile Include="Domain\MarsPlateau.cs" />
-    <Compile Include="Infrastructure\SpotOutsidePlateauException.cs" />
+    <Compile Include="Domain\Mothership.cs" />
+    <Compile Include="Implementation\MarsPlateau.cs" />
+    <Compile Include="Infrastructure\InvalidCommandException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Domain\Rover.cs" />
-    <Compile Include="Domain\Position.cs" />
+    <Compile Include="Implementation\Rover.cs" />
+    <Compile Include="Domain\Model\Position.cs" />
+    <Compile Include="Services\RoverCommandHandler.cs" />
     <Compile Include="Services\CommandInterpreter.cs" />
     <Compile Include="Services\DeploymentCommand.cs" />
     <Compile Include="Services\NavigationCommand.cs" />
